fixes background boxes and alignment at tablet view

--- a/themes/ecofair-theme/sass/_page-templates.scss
+++ b/themes/ecofair-theme/sass/_page-templates.scss
@@ -283,6 +283,7 @@
 		grid-column-start: 13;
 		grid-column-end: 17;
 		top: -324px;
+		left: 0px;
     }
 
     @include desktop {
@@ -505,8 +506,8 @@
     left: -10px;
 
     @include tablet {
-	width: 63%;
-	top: 114px;
+	width: 67%;
+	top: 130px;
     }
     @include desktop {
 	width: 100%;
@@ -526,7 +527,8 @@
     position: relative;
 
     @include tablet {
-	padding-top: 2rem;
+		padding-top: 2rem;
+		width: 98%;
     }
 
     @include desktop {
@@ -574,17 +576,18 @@
     grid-gap: 1rem;
     width: 95%;
     z-index: 10;
-    position: relative;
+		position: relative;
+		
     @include desktop {
-	grid-template-columns: 1fr 1fr 0.5fr;
-	grid-column-start: 2;
-	grid-column-end: 3;
-	grid-row-start: 2;
-	grid-row-end: 3;
-	padding-top: 3rem;
-	width: 100%;
-	z-index: 5;
-    }
+		grid-template-columns: 1fr 1fr 0.5fr;
+		grid-column-start: 2;
+		grid-column-end: 3;
+		grid-row-start: 2;
+		grid-row-end: 3;
+		padding-top: 3rem;
+		width: 100%;
+		z-index: 5;
+			}
 }
 
 .features-li {
@@ -715,12 +718,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 98%;
+		width: 98%;
+		
+		@include tablet {
+			width: 40%;
+			padding-top: 1.5rem;
+		}
     @include desktop {
-	flex-direction: row;
-	justify-content: space-between;
-	width: 40%;
-	margin: 2rem 1rem 1rem 1rem;
+			flex-direction: row;
+			justify-content: space-between;
+			margin: 2rem 1rem 1rem 1rem;
     }
 }
 
